--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 body {
-    background-color: rgb(150,200,200);
-    color: rgb(0,0,0);
+    background-color: rgb(150, 200, 200);
+    color: rgb(0, 0, 0);
     font-family: "Open Sans", sans-serif;
     text-align: center;
 }
