--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     background-size: 125%;
     color: rgb(255, 255, 255);
     font-size: 100%;
-    font-family: "Book Antiqua", sans-serif;
+    font-family: "Impact", sans-serif;
     text-align: center;
 }
 
