--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 
 body {
     background-color: rgb(200,200,200);
-	background-image: url("GlowDice.jpg");
+    background-image: url("GlowDice.jpg");
     color: rgb(255, 255, 255);
-    font-family: "Open Sans", sans-serif;
+    font-family: "Book Antiqua", sans-serif;
     text-align: center;
 }
 
