--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     background-color: rgb(200,200,200);
     background-image: url("GlowDice.jpg");
     color: rgb(255, 255, 255);
-    font-family: "Book Antiqua", sans-serif;
+    font-family: ‘Metrophobic’, Arial, serif; font-weight: 400; 
     text-align: center;
 }
 
