--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 
 body {
     background-color: rgb(200,200,200);
+	background-image: url(starfield.png);
     color: rgb(0,0,0);
     font-family: "Open Sans", sans-serif;
     text-align: center;
