--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 body {
     background-color: rgb(200,200,200);
-	background-image: url(starfield.png);
+    background-image: url(recursion.png);
     color: rgb(255,255,255);
     font-family: "Open Sans", sans-serif;
     text-align: center;
